--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.1",
+    "cron": "^3.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "mysql2": "^3.6.1",
+    "node-cron": "^3.0.2",
     "nodemon": "^3.0.1",
     "sequelize": "^6.33.0",
     "sequelize-cli": "^6.6.1",
